Фикс после пятого этапа альфа теста
